--- a/SHA1CalcOnMac/en.lproj/MainMenu.xib
+++ b/SHA1CalcOnMac/en.lproj/MainMenu.xib
@@ -722,6 +722,14 @@
 									<reference key="NSOnImage" ref="35465992"/>
 									<reference key="NSMixedImage" ref="502551668"/>
 								</object>
+								<object class="NSMenuItem" id="1012890715">
+									<reference key="NSMenu" ref="955489922"/>
+									<string key="NSTitle">Unmark Missing Files</string>
+									<string key="NSKeyEquiv"/>
+									<int key="NSMnemonicLoc">2147483647</int>
+									<reference key="NSOnImage" ref="35465992"/>
+									<reference key="NSMixedImage" ref="502551668"/>
+								</object>
 								<object class="NSMenuItem" id="1034648618">
 									<reference key="NSMenu" ref="955489922"/>
 									<bool key="NSIsDisabled">YES</bool>
@@ -1453,7 +1461,7 @@
 											<string key="NSFrameSize">{1159, 145}</string>
 											<reference key="NSSuperview" ref="243087117"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView" ref="309151393"/>
+											<reference key="NSNextKeyView" ref="333775826"/>
 											<int key="NSViewLayerContentsRedrawPolicy">2</int>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSTableHeaderView" key="NSHeaderView" id="230757087">
@@ -1734,7 +1742,6 @@
 									<string key="NSFrame">{{1, 162}, {397, 15}}</string>
 									<reference key="NSSuperview" ref="253340768"/>
 									<reference key="NSWindow"/>
-									<reference key="NSNextKeyView"/>
 									<int key="NSViewLayerContentsRedrawPolicy">2</int>
 									<bool key="NSEnabled">YES</bool>
 									<int key="NSsFlags">1</int>
@@ -1762,7 +1769,7 @@
 							<string key="NSFrame">{{15, 20}, {399, 178}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="333775826"/>
+							<reference key="NSNextKeyView" ref="243087117"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<int key="NSsFlags">690</int>
 							<reference key="NSVScroller" ref="309151393"/>
@@ -2607,6 +2614,14 @@
 						<reference key="destination" ref="992558226"/>
 					</object>
 					<int key="connectionID">650</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">unmarkMissingFiles:</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="1012890715"/>
+					</object>
+					<int key="connectionID">652</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -3740,6 +3755,7 @@
 							<reference ref="202478489"/>
 							<reference ref="992558226"/>
 							<reference ref="1034648618"/>
+							<reference ref="1012890715"/>
 						</array>
 						<reference key="parent" ref="568783349"/>
 					</object>
@@ -3819,6 +3835,11 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">649</int>
 						<reference key="object" ref="1034648618"/>
+						<reference key="parent" ref="955489922"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">651</int>
+						<reference key="object" ref="1012890715"/>
 						<reference key="parent" ref="955489922"/>
 					</object>
 				</array>
@@ -4000,6 +4021,7 @@
 				<string key="646.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="648.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="649.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="651.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="72.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="73.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="75.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -4014,7 +4036,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">650</int>
+			<int key="maxID">652</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -4089,6 +4111,7 @@
 						<string key="saveDocumentAs:">id</string>
 						<string key="selectIfChecked:">id</string>
 						<string key="uncheckFirstItem:">id</string>
+						<string key="unmarkMissingFiles:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
 						<object class="IBActionInfo" key="centerSelectionInVisibleArea:">
@@ -4193,6 +4216,10 @@
 						</object>
 						<object class="IBActionInfo" key="uncheckFirstItem:">
 							<string key="name">uncheckFirstItem:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="unmarkMissingFiles:">
+							<string key="name">unmarkMissingFiles:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 					</dictionary>
